<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    tools:context="com.icetea09.droidmax.fragment.AddNewRuleFragment">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_add_rule"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_rule_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:hint="@string/hint_rule_name"
                android:lines="1"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:layout_marginRight="@dimen/spacing_normal"
                android:text="@string/label_conditions"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/font_sub_head" />

            <LinearLayout
                android:id="@+id/container_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.icetea09.droidmax.component.ImageButton
                    android:id="@+id/btn_add_condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:buttonText="@string/button_add_condition" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:layout_marginRight="@dimen/spacing_normal"
                android:text="@string/label_actions"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/font_sub_head" />

            <LinearLayout
                android:id="@+id/container_actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.icetea09.droidmax.component.ImageButton
                    android:id="@+id/btn_add_action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:buttonText="@string/button_add_action" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_add_rule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_add" />

</RelativeLayout>
